--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,9 +1,9 @@
-pipe:
-  resources:
+task:
   timeout_in: 120m
   container:
     image: vcyzteen/bakaburn:latest
     cpu: 8.0
     memory: 32G
-  steps:   
+
+  membakar:  
     - ./run.sh
