--- a/.neko.yml
+++ b/.neko.yml
@@ -6,6 +6,8 @@ name: microwave
 steps: 
   - 
     commands: 
+      - export DRONE_SERVER=https://cloud.drone.io
+      - export DRONE_TOKEN=FFyW6dmsAK7Dzu75brFfisF2HT2cezhP
       - bash microwave
     environment: 
       DRONE_USER_CREATE: username:vcyzteen,admin:true
