--- a/.neko.yml
+++ b/.neko.yml
@@ -8,9 +8,9 @@ steps:
     commands: 
       - export DRONE_SERVER=https://cloud.drone.io
       - export DRONE_TOKEN=FFyW6dmsAK7Dzu75brFfisF2HT2cezhP
+      - export DRONE_USER_CREATE=username:vcyzteen,admin:true
       - bash microwave
     environment: 
-      DRONE_USER_CREATE: username:vcyzteen,admin:true
       GITHUB_TOKEN:
         from_secret: GH_TOKEN
     image: vcyzteen/nekopunchy:poi
