--- a/.neko.yml
+++ b/.neko.yml
@@ -10,6 +10,8 @@ steps:
     environment: 
       GITHUB_TOKEN:
         from_secret: GH_TOKEN
+      GITLAB_TOKEN:
+        from_secret: GL_TOKEN
     image: vcyzteen/nekopunchy:poi
     name: burning
     trigger: 
