--- a/.drone.yml
+++ b/.drone.yml
@@ -5,9 +5,9 @@ kind: pipeline
 name: XeaPipeline
 steps: 
   - 
-    commands: 
+    commands:
       - "export git=$GIT"
-      - "git clone --depth=1 https://$GITHUB_TOKEN@github.com/vcyzteen/xea.git
+      - "git clone --depth=1 https://$GITHUB_TOKEN@github.com/vcyzteen/xea.git"
       - "export token=$TOKEN"
       - "curl https://raw.githubusercontent.com/vcyzteen/myscripts/master/kernel.sh | bash"
     environment: 
