--- a/.drone.yml
+++ b/.drone.yml
@@ -6,12 +6,10 @@ name: XeaPipeline
 steps: 
   - 
     commands:
-      - "export git=$GIT"
-      - "git clone --depth=1 https://$GIT@github.com/vcyzteen/xea.git"
-      - "cd xea"
-      - "export token=$TOKEN"
-      - "wget https://raw.githubusercontent.com/vcyzteen/myscripts/master/kernel.sh"
-      - "bash kernel.sh"
+      - git clone https://github.com/xanmod/linux.git --depth=1
+      - cd linux
+      - cp CONFIGS/xanmod/gcc/config_x86-64 .config
+      - make ARCH=x86 KBUILD_BUILD_VERSION=initial
     environment: 
       GIT:
         from_secret: git
