--- a/.drone.yml
+++ b/.drone.yml
@@ -6,13 +6,15 @@ name: XeaPipeline
 steps: 
   - 
     commands:
+      - sudo apt-get -y install kmod
       - git clone https://github.com/xanmod/linux.git --depth=1
       - cd linux
       - cp CONFIGS/xanmod/gcc/config_x86-64 .config
       - export ARCH=x86
       - make -j24 0=out
+      - make -j24 0=out modules_install
       - make -j24 0=out intdeb-pkg
-      - find . -name *.deb
+      - find /out -name *.deb
     environment: 
       GIT:
         from_secret: git
