--- a/.drone.yml
+++ b/.drone.yml
@@ -12,8 +12,8 @@ steps:
       - cp CONFIGS/xanmod/gcc/config_x86-64 .config
       - export ARCH=x86
       - make clean 0=out
+      - grep -q 'Rules-Requires-Root: no' scripts/package/mkdebian || grep -q fakeroot scripts/Makefile.package scripts/package/Makefile || echo fakeroot
       - make -j24 0=out
-      - make -j24 0=out modules_install
       - make -j24 0=out bindeb-pkg
       - find /out -name *.deb
     environment: 
