--- a/.drone.yml
+++ b/.drone.yml
@@ -12,8 +12,8 @@ steps:
       - cp CONFIGS/xanmod/gcc/config_x86-64 .config
       - export ARCH=x86
       - mkdir -p out
-      - make clean 0=out
-      - make -j24 0=out bindeb-pkg
+      - make clean O=out
+      - make -j24 O=out bindeb-pkg
       - ls out
       - ls ../
       - find out -name *.deb
