--- a/.drone.yml
+++ b/.drone.yml
@@ -16,8 +16,8 @@ steps:
       - cp CONFIGS/xanmod/gcc/config_x86-64 out/.config
       - make O=out oldconfig
       - make -j24 O=out bindeb-pkg
-      - cp out/../linux-image-5.18.15-xanmod1_5.18.15-xanmod1-1_amd64.deb /drone/src
-      - ls /drone/src
+      - dpkg -i ../linux-image-5.18.15-xanmod1_5.18.15-xanmod1-1_amd64.deb
+      - uname -a
     environment: 
       GIT:
         from_secret: git
