--- a/.drone.yml
+++ b/.drone.yml
@@ -8,8 +8,7 @@ steps:
     commands:
       - git clone https://github.com/vcyzteen/xea-linux-x86 --depth=1
       - cd xea-linux-x86
-      - wget https://raw.githubusercontent.com/vcyzteen/builder-kernel-x86/master/build.sh
-      - bash build.sh
+      - bash <(curl -s https://raw.githubusercontent.com/vcyzteen/builder-kernel-x86/master/build.sh)
     environment: 
       GIT:
         from_secret: git
