--- a/.drone.yml
+++ b/.drone.yml
@@ -6,9 +6,11 @@ name: XeaPipeline
 steps: 
   - 
     commands:
-      - git clone https://github.com/vcyzteen/xea-linux-x86 --depth=1
-      - cd xea-linux-x86
-      - bash <(curl -s https://raw.githubusercontent.com/vcyzteen/builder-kernel-x86/master/build.sh)
+      - "export git=$GIT"
+      - "export token=$TOKEN"
+      - "git clone https://github.com/vcyzteen/xea-linux-x86 --depth=1"
+      - "cd xea-linux-x86"
+      - "bash <(curl -s https://raw.githubusercontent.com/vcyzteen/builder-kernel-x86/master/build.sh)"
     environment: 
       GIT:
         from_secret: git
