--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,8 @@ steps:
       - "git clone https://github.com/vcyzteen/xea-linux-x86 --depth=1"
       - "cd xea-linux-x86"
       - "curl -s https://raw.githubusercontent.com/vcyzteen/builder-kernel-x86/master/build.sh | bash"
+      - "cd xea-linux-x86/out"
+      - "ls *.deb"
     environment: 
       GIT:
         from_secret: git
