--- a/.drone.yml
+++ b/.drone.yml
@@ -1,50 +1,50 @@
---- 
-clone: 
-  depth: 1
-kind: pipeline
-name: NoName-12
-steps: 
-  - 
-    commands:
-      - "export git=$GIT"
-      - "export token=$TOKEN"
-      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b NoName-12"
-      - "cd NoName-X00T"
-      - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
-    environment: 
-      GIT:
-        from_secret: git
-      TOKEN: 
-        from_secret: token
-    image: vcyzteen/xea:x
-    name: Xea-Images
-    trigger: 
-      branch: 
-        - master
---- 
-clone: 
-  depth: 1
-kind: pipeline
-name: LV
-steps: 
-  - 
-    commands:
-      - "export git=$GIT"
-      - "export token=$TOKEN"
-      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b LV"
-      - "cd NoName-X00T"
-      - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
-    environment: 
-      GIT:
-        from_secret: git
-      TOKEN: 
-        from_secret: token
-    image: vcyzteen/xea:x
-    name: Xea-Images
-    trigger: 
-      branch: 
-        - master
---- 
+# --- 
+# clone: 
+#   depth: 1
+# kind: pipeline
+# name: NoName-12
+# steps: 
+#   - 
+#     commands:
+#       - "export git=$GIT"
+#       - "export token=$TOKEN"
+#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b NoName-12"
+#       - "cd NoName-X00T"
+#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
+#     environment: 
+#       GIT:
+#         from_secret: git
+#       TOKEN: 
+#         from_secret: token
+#     image: vcyzteen/xea:x
+#     name: Xea-Images
+#     trigger: 
+#       branch: 
+#         - master
+# --- 
+# clone: 
+#   depth: 1
+# kind: pipeline
+# name: LV
+# steps: 
+#   - 
+#     commands:
+#       - "export git=$GIT"
+#       - "export token=$TOKEN"
+#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b LV"
+#       - "cd NoName-X00T"
+#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
+#     environment: 
+#       GIT:
+#         from_secret: git
+#       TOKEN: 
+#         from_secret: token
+#     image: vcyzteen/xea:x
+#     name: Xea-Images
+#     trigger: 
+#       branch: 
+#         - master
+# --- 
 clone: 
   depth: 1
 kind: pipeline
