--- a/.drone.yml
+++ b/.drone.yml
@@ -22,39 +22,16 @@
 #       branch: 
 #         - master
 # --- 
-# clone: 
-#   depth: 1
-# kind: pipeline
-# name: LV
-# steps: 
-#   - 
-#     commands:
-#       - "export git=$GIT"
-#       - "export token=$TOKEN"
-#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b LV"
-#       - "cd NoName-X00T"
-#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
-#     environment: 
-#       GIT:
-#         from_secret: git
-#       TOKEN: 
-#         from_secret: token
-#     image: vcyzteen/xea:x
-#     name: Xea-Images
-#     trigger: 
-#       branch: 
-#         - master
-# --- 
 clone: 
   depth: 1
 kind: pipeline
-name: NLV
+name: LV
 steps: 
   - 
     commands:
       - "export git=$GIT"
       - "export token=$TOKEN"
-      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b NLV"
+      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b LV"
       - "cd NoName-X00T"
       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
     environment: 
@@ -67,3 +44,26 @@ steps:
     trigger: 
       branch: 
         - master
+# --- 
+# clone: 
+#   depth: 1
+# kind: pipeline
+# name: NLV
+# steps: 
+#   - 
+#     commands:
+#       - "export git=$GIT"
+#       - "export token=$TOKEN"
+#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b NLV"
+#       - "cd NoName-X00T"
+#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
+#     environment: 
+#       GIT:
+#         from_secret: git
+#       TOKEN: 
+#         from_secret: token
+#     image: vcyzteen/xea:x
+#     name: Xea-Images
+#     trigger: 
+#       branch: 
+#         - master
