--- a/.drone.yml
+++ b/.drone.yml
@@ -22,28 +22,28 @@
 #       branch: 
 #         - master
 # --- 
-clone: 
-  depth: 1
-kind: pipeline
-name: LV
-steps: 
-  - 
-    commands:
-      - "export git=$GIT"
-      - "export token=$TOKEN"
-      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b LV"
-      - "cd NoName-X00T"
-      - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
-    environment: 
-      GIT:
-        from_secret: git
-      TOKEN: 
-        from_secret: token
-    image: vcyzteen/xea:x
-    name: Xea-Images
-    trigger: 
-      branch: 
-        - master
+# clone: 
+#   depth: 1
+# kind: pipeline
+# name: LV
+# steps: 
+#   - 
+#     commands:
+#       - "export git=$GIT"
+#       - "export token=$TOKEN"
+#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b LV"
+#       - "cd NoName-X00T"
+#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
+#     environment: 
+#       GIT:
+#         from_secret: git
+#       TOKEN: 
+#         from_secret: token
+#     image: vcyzteen/xea:x
+#     name: Xea-Images
+#     trigger: 
+#       branch: 
+#         - master
 # --- 
 # clone: 
 #   depth: 1
@@ -67,3 +67,26 @@ steps:
 #     trigger: 
 #       branch: 
 #         - master
+# --- 
+clone: 
+  depth: 1
+kind: pipeline
+name: R42 test
+steps: 
+  - 
+    commands:
+      - "export git=$GIT"
+      - "export token=$TOKEN"
+      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b Q-test"
+      - "cd NoName-X00T"
+      - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
+    environment: 
+      GIT:
+        from_secret: git
+      TOKEN: 
+        from_secret: token
+    image: vcyzteen/xea:x
+    name: Xea-Images
+    trigger: 
+      branch: 
+        - master
