Start Job NLV [2]
Signed-off-by: Daffa06 <kumaraprastya@gmail.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -45,39 +45,16 @@
 #       branch: 
 #         - master
 # --- 
-# clone: 
-#   depth: 1
-# kind: pipeline
-# name: NLV
-# steps: 
-#   - 
-#     commands:
-#       - "export git=$GIT"
-#       - "export token=$TOKEN"
-#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b NLV"
-#       - "cd NoName-X00T"
-#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
-#     environment: 
-#       GIT:
-#         from_secret: git
-#       TOKEN: 
-#         from_secret: token
-#     image: xealea/xea:01
-#     name: Xea-Images
-#     trigger: 
-#       branch: 
-#         - master
-# --- 
 clone: 
   depth: 1
 kind: pipeline
-name: R42 test
+name: NLV
 steps: 
   - 
     commands:
       - "export git=$GIT"
       - "export token=$TOKEN"
-      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b Q-test"
+      - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b NLV"
       - "cd NoName-X00T"
       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
     environment: 
@@ -90,3 +67,26 @@ steps:
     trigger: 
       branch: 
         - master
+# --- 
+# clone: 
+#   depth: 1
+# kind: pipeline
+# name: R42 test
+# steps: 
+#   - 
+#     commands:
+#       - "export git=$GIT"
+#       - "export token=$TOKEN"
+#       - "git clone --depth=1 https://github.com/Daffa06/NoName-X00T.git -b Q-test"
+#       - "cd NoName-X00T"
+#       - "curl -s https://raw.githubusercontent.com/Daffa06/myscripts-kernel/master/kernel.sh | bash"
+#     environment: 
+#       GIT:
+#         from_secret: git
+#       TOKEN: 
+#         from_secret: token
+#     image: xealea/xea:01
+#     name: Xea-Images
+#     trigger: 
+#       branch: 
+#         - master
